--- a/core/css/default/button.scss
+++ b/core/css/default/button.scss
@@ -1,3 +1,15 @@
-mui-button {
-  border: 3px solid black;
+.flat-button {
+  width: 200px;
+  height: 60px;
+  padding: 0;
+  font-size: 22px;
+  color: white;
+  text-align: center;
+  text-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
+  background: #00BFFF;
+  border: 0;
+  border-bottom: 2px solid #1E90FF;
+  cursor: pointer;
+  -webkit-box-shadow: inset 0 -2px #1E90FF;
+  box-shadow: inset 0 -2px #1E90FF;
 }
