--- a/core/css/default/input.scss
+++ b/core/css/default/input.scss
@@ -1,4 +1,20 @@
 mui-input {
-  border: 3px solid black;
   color: #34495e;
+  padding: 10px 19px;
+  font-size: 17px;
+  line-height: 1.471;
+  border-radius: 6px;
+}
+
+mui-input[data-type="inactive"] {
+  border: 2px solid #bdc3c7;
+}
+
+mui-input[data-type="success"] {
+  border: 2px solid #2ecc71;
+}
+
+mui-input input {
+  border: 0;
+  box-shadow: none;
 }
