--- a/core/css/default/input.scss
+++ b/core/css/default/input.scss
@@ -1,26 +1,33 @@
 mui-input {
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   width: 200px;
   color: #34495e;
 }
 
-mui-input[data-type="inactive"] input {
-  border: 2px solid #bdc3c7;
-}
-
-mui-input[data-type="success"] input {
-  border: 2px solid #2ecc71;
-}
-
 mui-input input {
+  width: 100%;
   padding: 10px 19px;
   font-size: 17px;
   line-height: 1.471;
   border-radius: 6px;
   box-shadow: none;
+  transition: 250ms ease-in-out-cubic;
 }
 
+mui-input[data-type="inactive"] input {
+  border: 4px solid #bdc3c7;
+}
+
+mui-input[data-type="inactive"] input:focus {
+  border: 4px solid #2ecc71;
+}
+
+mui-input[data-type="success"] input {
+  border: 4px solid #2ecc71;
+}
+
+// General style disabling
 mui-input input:focus {
   outline: none;
 }
