--- a/core/css/default/button.scss
+++ b/core/css/default/button.scss
@@ -12,4 +12,7 @@
   cursor: pointer;
   -webkit-box-shadow: inset 0 -2px #1E90FF;
   box-shadow: inset 0 -2px #1E90FF;
+  -moz-border-radius: 15px;
+  -webkit-border-radius: 15px;
+  border-radius: 15px;
 }
