--- a/core/css/flatui/Switch.scss
+++ b/core/css/flatui/Switch.scss
@@ -1,3 +1,5 @@
+@import 'variables';
+
 mui-switch {
   display: flex;
   flex-direction: column;
@@ -13,9 +15,9 @@ mui-switch label {
   height: 30px;
   cursor: pointer;
   position: relative;
-  background: rgb(189, 189, 189);
   border-radius: 30px;
-  transition: background-color 0.4s;
+  background: $gray;
+  transition: $animation_main;
 }
 
 mui-switch label:after {
@@ -30,7 +32,7 @@ mui-switch label:after {
 }
 
 mui-switch input:checked + label {
-  background: rgb(39, 173, 95);
+  background: $green;
 }
 
 mui-switch input:checked + label:after {
