--- a/core/css/flatui/variables.scss
+++ b/core/css/flatui/variables.scss
@@ -2,5 +2,5 @@
 $animation_main: 250ms ease-in-out-cubic;
 
 // Colors
-$gray = rgb(189, 189, 189);
-$green = #2ecc71;
+$gray: rgb(189, 189, 189);
+$green: #2ecc71;
