--- a/core/css/flatui/Button.scss
+++ b/core/css/flatui/Button.scss
@@ -6,12 +6,12 @@
   color: white;
   text-align: center;
   text-shadow: 0 1px 20px rgba(0, 0, 0, 0.25);
-  background: #00BFFF;
+  background: #00bfff;
   border: 0;
-  border-bottom: 2px solid #1E90FF;
+  border-bottom: 2px solid #1e90ff;
   cursor: pointer;
-  -webkit-box-shadow: inset 0 -2px #1E90FF;
-  box-shadow: inset 0 -2px #1E90FF;
+  -webkit-box-shadow: inset 0 -2px #1e90ff;
+  box-shadow: inset 0 -2px #1e90ff;
   -moz-border-radius: 15px;
   -webkit-border-radius: 15px;
   border-radius: 15px;
