--- a/core/css/flatui/Switch.scss
+++ b/core/css/flatui/Switch.scss
@@ -20,14 +20,14 @@ mui-switch label {
   transition: $animation_main;
 }
 
-mui-switch label:after {
+mui-switch label::after {
   left: 0;
   width: 20px;
   height: 20px;
   margin: 5px;
   content: '';
   position: absolute;
-  background: #FFF;
+  background: #fff;
   border-radius: 10px;
 }
 
@@ -35,7 +35,7 @@ mui-switch input:checked + label {
   background: $green;
 }
 
-mui-switch input:checked + label:after {
+mui-switch input:checked + label::after {
   left: auto;
   right: 0;
 }
